--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,6 @@
         android:textColor="@android:color/white"
         android:textStyle="bold" />
 
-
-
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,14 +34,19 @@
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                 />
 
-        <TextView
-            android:id="@+id/article"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            android:lineSpacingExtra="@dimen/line_spacing"
-            android:padding="@dimen/padding_regular"
-            android:text="@string/article_text" />
+            <TextView
+                android:id="@+id/article"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:lineSpacingExtra="@dimen/line_spacing"
+                android:padding="@dimen/padding_regular"
+                android:text="@string/article_text" />
+            <Button
+                android:layout_width="wrap_content"
+                android:text="@string/add_comment"
+                android:layout_height="match_parent"
+            />
         </LinearLayout>
     </ScrollView>
 
